GNOME Bugzilla – Bug 361885
Cannot background compose window
Last modified: 2006-10-13 15:42:53 UTC
Hi, A Debian user reported the following at http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=392614 : ----8<---- Pan enforces a very strict window stacking order that treats most windows as dialog boxes that float above the main window. This makes it impossible to put those windows (e.g. the compose window, and the preferences window) behind the main window in order to (for example) grab some text to copy/paste into the message I'm composing. ----8<---- I never considered that before, but now that I see it mentioned, I tend to agree with the submitter.
Fixed in the development version. The fix will be available in the next major release. Thank you for your bug report.