http://bugzilla.gnome.org/show_bug.cgi?id=361885 Bug 361885 – Cannot background compose window